--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.11.1"
+
+    "tailwindcss": "^3.3.2"
   }
 }
